<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/time_left_label"
        android:id="@+id/match_challenge_label"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/translate"
        android:id="@+id/prompt_label"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/challenge_content"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/to_morse"
        android:id="@+id/challenge_instructions"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/morse_output"
        android:layout_gravity="center_horizontal"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:layout_marginBottom="25dp">

        <Button
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:text="."
            android:id="@+id/dit_button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="100sp"
            android:layout_below="@+id/backspace_button"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:text="-"
            android:id="@+id/dah_button"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textSize="100sp"
            android:layout_below="@+id/backspace_button"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:text="Char Space"
            android:id="@+id/char_space_button"
            android:layout_toRightOf="@+id/dit_button"
            android:layout_toLeftOf="@+id/dah_button"
            android:textSize="10sp"
            android:layout_below="@+id/backspace_button"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="Word Space"
            android:id="@+id/word_space_button"
            android:layout_below="@+id/char_space_button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:singleLine="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backspace"
            android:id="@+id/backspace_button"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/dah_button"
            android:layout_alignEnd="@+id/dah_button"/>
    </RelativeLayout>
</LinearLayout>